--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     compile 'org.florescu.android.rangeseekbar:rangeseekbar-library:0.3.0'
     compile 'com.android.support:cardview-v7:27.0.2'
     compile 'commons-io:commons-io:2.5'
+    compile group: 'com.google.guava', name: 'guava', version: '20.0'
     testCompile 'junit:junit:4.12'
 }
 
