--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:27.0.2'
     compile 'com.android.support:design:27.0.2'
-    compile 'com.writingminds:FFmpegAndroid:0.3.2'
+    implementation 'nl.bravobit:android-ffmpeg:1.1.1'
     compile 'com.crystal:crystalrangeseekbar:1.1.3'
     compile 'commons-io:commons-io:2.5'
     compile group: 'com.google.guava', name: 'guava', version: '20.0'
