Use fork of ffmpeg-android-java. v0.1
This fork is from:

    https://github.com/brarcher/ffmpeg-android-java/releases/tag/v0.1

and is intended to allow building the ffmpeg binary with custom options.

--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,9 @@ allprojects {
         jcenter()
         google()
         maven { url "https://jitpack.io" }
+        flatDir {
+            dirs 'libs'
+        }
     }
 }
 
