--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,13 +39,14 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:27.0.2'
     compile 'com.android.support:design:27.0.2'
-    implementation 'nl.bravobit:android-ffmpeg:1.1.1'
+    implementation 'protect:android-ffmpeg:release@aar'
     compile 'com.crystal:crystalrangeseekbar:1.1.3'
     compile 'commons-io:commons-io:2.5'
     compile group: 'com.google.guava', name: 'guava', version: '20.0'
     compile 'com.github.codekidX:storage-chooser:2.0.3'
     implementation group: 'org.javatuples', name: 'javatuples', version: '1.2'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.8.11.1'
+
     testCompile 'junit:junit:4.12'
     testCompile "org.robolectric:robolectric:3.6.1"
 }
