Move export file provider to a separate, empty class
This is to avoid a name conflict with using the
no nonsense filepicker in a future commit.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             </intent-filter>
         </activity>
         <provider
-            android:name="android.support.v4.content.FileProvider"
+            android:name=".provider.ExportFileProvider"
             android:grantUriPermissions="true"
             android:exported="false"
             android:authorities="${applicationId}">
