--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     compile 'com.crystal:crystalrangeseekbar:1.1.3'
     compile 'commons-io:commons-io:2.5'
     compile group: 'com.google.guava', name: 'guava', version: '20.0'
-    compile 'com.github.codekidX:storage-chooser:2.0.3'
+    compile 'com.nononsenseapps:filepicker:4.2.1'
     implementation group: 'org.javatuples', name: 'javatuples', version: '1.2'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.8.11.1'
 
