Add a scroll bar when searching for a media file
If a media file is being searched for, and the current folder
has a lot of files, searching to the bottom of the list is
painful because there is no scroll bar. This change adds a
scroll bar via the recyclerview-fastscroll library.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     compile 'commons-io:commons-io:2.5'
     compile group: 'com.google.guava', name: 'guava', version: '20.0'
     compile 'com.nononsenseapps:filepicker:4.2.1'
+    implementation 'com.simplecityapps:recyclerview-fastscroll:1.0.9'
     implementation group: 'org.javatuples', name: 'javatuples', version: '1.2'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.8.11.1'
 
