Add additional repo uri
Some of the libraries in the jcenter repo are now missing.
Adding an additional link to find these missing dependencies.

--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@
 
 buildscript {
     repositories {
-        jcenter()
         google()
+        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
@@ -15,9 +15,10 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
         google()
+        maven { url "https://maven.google.com" }
         maven { url "https://jitpack.io" }
+        jcenter()
         flatDir {
             dirs 'libs'
         }
