--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     implementation 'protect:android-ffmpeg:release@aar'
     implementation 'com.crystal:crystalrangeseekbar:1.1.3'
     implementation 'commons-io:commons-io:2.6'
-    implementation group: 'com.google.guava', name: 'guava', version: '25.1-android'
+    implementation group: 'com.google.guava', name: 'guava', version: '23.0'
     implementation 'com.nononsenseapps:filepicker:4.2.1'
     implementation 'com.simplecityapps:recyclerview-fastscroll:1.0.18'
     implementation group: 'org.javatuples', name: 'javatuples', version: '1.2'
@@ -61,7 +61,7 @@ dependencies {
     implementation 'ch.acra:acra:4.11'
 
     testImplementation 'junit:junit:4.12'
-    testImplementation "org.robolectric:robolectric:4.0-alpha-2"
+    testImplementation "org.robolectric:robolectric:3.8"
 }
 
 task findbugs(type: FindBugs, dependsOn: 'assembleDebug') {
