Disable configure on demand in gradle
The Android plugin does not presently support
configuration on demand in Gradle 4.6+. As a result,
Android Studio fails to build with it enabled.

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,7 @@
 # a bug. Build tools 27.0.1 has a mitigation. Avoiding aapt2 also avoids hitting the bug.
 # See: https://issuetracker.google.com/issues/64434571
 android.enableAapt2=false
+
+# The Android plugin does not presently support configuration on demand
+# on Gradle 4.6+.
+org.gradle.configureondemand=false
