Improve GRADLE build Performance

--- a/gradle.properties
+++ b/gradle.properties
@@ -24,4 +24,4 @@ android.enableAapt2=false
 
 # The Android plugin does not presently support configuration on demand
 # on Gradle 4.6+.
-org.gradle.configureondemand=false
+org.gradle.configureondemand=true
