--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,11 +13,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: set up JDK 1.8
+    - name: set up JDK 8
       uses: actions/setup-java@v4
       with:
         distribution: 'zulu'
-        java-version: 1.8
+        java-version: '8'
     - name: Build
       run: ./gradlew assembleRelease
     - name: Check lint
