--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -32,7 +32,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: Video-Transcoder.apk
-        path: bin/protect.videoeditor-UNSIGNED.apk
+        path: app/build/outputs/apk/debug/app-debug.apk
     - name: Check lint
       run: ./gradlew lintRelease
     - name: Run unit tests
