--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -27,12 +27,12 @@ jobs:
         distribution: 'zulu'
         java-version: '8'
     - name: Build
-      run: ./gradlew assembleRelease
+      run: ./gradlew assembleDebug
     - name: Save artifact
       uses: actions/upload-artifact@v4
       with:
         name: Video-Transcoder.apk
-        path: app/build/outputs/apk/release/app-release.apk
+        path: app/build/outputs/apk/app-debug.apk
     - name: Check lint
       run: ./gradlew lintRelease
     - name: Run unit tests
